# aoc2023

./: .gitignore  LICENSE  README.md  aoc2023.cabal  flake.nix  justfile
lib/Util/: Aoc2023.hs
lib/Util/Aoc2023/: Array.hs  Dir.hs  Vec2.hs
src/: Day1.hs  Day10.hs  Day11.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day18.hs  Day19.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
template/: Main.hs
