cabal-version: 3.0
name:          aoc2023
version:       0.1.0.0
synopsis:      My Advent of Code 2023 solutions
license:       MIT
license-file:  LICENSE
author:        Leah Amelia Chen
maintainer:    hi@pluie.me
build-type:    Simple

common deps
  default-language: GHC2021
  build-depends:
    , array
    , base        ^>=4.17.2.1
    , containers
    , hspec
    , megaparsec
    , safe
    , split
    , transformers
    , vector

  ghc-options:      -Wall

library
  import:          deps
  exposed-modules:
    Util.Aoc2023
    Util.Aoc2023.Array
    Util.Aoc2023.Dir
    Util.Aoc2023.Vec2

  hs-source-dirs:  lib

executable solns
  import:         deps
  build-depends:  aoc2023
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:
    Day1
    Day10
    Day11
    Day13
    Day14
    Day15
    Day16
    Day18
    Day19
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9

  ghc-options:    -O2 -threaded -fprof-auto "-with-rtsopts=-N -p -s"
